Move Wobbuffet up, prevent damage text overflow

--- a/Super Damage Calculator/src/superDamageCalculator/stylesheet.css
+++ b/Super Damage Calculator/src/superDamageCalculator/stylesheet.css
@@ -4,6 +4,15 @@
 	-fx-font-size: 12;
 }
 
+#damage-label
+{
+	-fx-font-family: "Times New Roman";
+	-fx-font-size: 20;
+	-fx-alignment: "top-left";
+	-fx-wrap-text: false;
+	-fx-text-overrun: "ellipsis";
+}
+
 #move-cells
 {
 	-fx-font-family: "Segoe UI";
